src/Dashboard.scss
@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

$gap: 10px;
$column-header-height: 36px;
$column-footer-height: 36px;
$column-border-radius: 5px;
$card-border-radius: 5px;

$board-bg-color: #ADD8E6;
$navbarapp-bg-color: white;
$list-bg-color: #ebecf0;
$common-element-bg: rgba(255, 255, 255, .24);

body {
  margin: 0;
  font-family: 'Work Sans', sans-serif;
  font-size: 14px;
  line-height: 1.3em;
}

.Dashboard {
  height: 100vh;
  display: grid;
  grid-template-rows: 40px 50px 1fr;
  line-height: 1.3em;
  background-color: $board-bg-color;

  .NavBar {
    padding-left: $gap;
    display: flex;
    align-items: center;

    &.App {
      background-color: $navbarapp-bg-color;
      font-size: 1.5rem;
    }

    &.Board {
      background-color: $board-bg-color;
      font-size: 1.1rem;
    }
  }

  .BoardColumns {
    display: flex;
    overflow-x: auto;
    &::-webkit-scrollbar {
      -webkit-appearance: none;
    }

    &::-webkit-scrollbar:horizontal {
      height: 11px;
    }

    &::-webkit-scrollbar-thumb {
      background-color: $common-element-bg;
      border-radius: 5px;
    }

    .Column {
      flex: 0 0 auto;
      width: 300px;
      height: calc(100% - #{$gap});
      margin-left: $gap;
      > * {
        background-color: $list-bg-color;
        color: #333;
        padding: 0 8px;
      }

      header {
        padding-left: 15px;
        height: $column-header-height;
        line-height: $column-header-height;
        font-size: 16px;
        font-weight: bold;
        border-top-left-radius: $column-border-radius;
        border-top-right-radius: $column-border-radius;
      }

      footer {
        padding-left: $gap;
        height: $column-footer-height;
        line-height: $column-footer-height;
        border-bottom-left-radius: $column-border-radius;
        border-bottom-right-radius: $column-border-radius;
      }

      ul {
        list-style-type: none;
        margin: 0;
        max-height: calc(100% - #{$column-header-height} - #{$column-footer-height});
        overflow-y: auto;
        &::-webkit-scrollbar {
          -webkit-appearance: none;
        }

        &::-webkit-scrollbar:vertical {
          width: 11px;
        }

        &::-webkit-scrollbar-thumb {
          background-color: darken($list-bg-color, 15);
          border-right: 5px solid $list-bg-color;
        }

        li {
          background-color: white;
          padding: $gap;
          border-radius: $card-border-radius;
          box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
          &:not(:last-child) {
            margin-bottom: $gap;
          }

          img {
            display: block;
            width: calc(100% + 2 * #{$gap});
            margin: -$gap 0 $gap (-$gap);
            border-top-left-radius: $card-border-radius;
            border-top-right-radius: $card-border-radius;
          }
        }
      }
    }
  }
}

